# gsea_lite

./: 404.html  Dockerfile  MIT  LICENSE  environment.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: .gitignore  gsea_lite.html  gsea_lite.ipynb  index.md  tutorial.md
examples/: demo.ipynb
results/notebook_gsea_lite/: gsea_results.csv  ora_results_fdr.csv  workflow_summary.csv
search/: search_index.json
src/gsea_lite/: __init__.py  cli.py  gsea.py  io.py  ora.py  stats.py  visualize.py
src/gsea_lite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_core.py  test_io.py
tutorial/: index.html
